# coco-rs

./: .gitmodules  Cargo.toml  README.md
coco-sys/: Cargo.toml  build.rs  prebuild-coco.sh  wrapper.c  wrapper.h
coco-sys/src/: lib.rs
examples/: example-experiment.rs
src/: lib.rs
