[package]
name = "coco-sys"
version = "0.1.0"
license = "MIT"
authors = ["Leopold Luley"]
description = "Generated Rust bindings for COCO benchmarking framework"
repository = "https://github/luleyleo/coco-rs"
keywords = ["coco", "benchmark", "blackbox", "bindings"]
categories = ["science"]
edition = "2021"
links = "coco"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0"